# acoustix

./: .gitignore  CITATION.cff  README.md  flake.nix  pyproject.toml  shell.nix
acoustix/: __init__.py  audio_signal.py  audio_simulator.py  doa_encoding.py  noise.py  stft.py  utils.py
acoustix/datasets/: cbf.py  download_librispeech.sh  librispeech.py
acoustix/egocentric_map/: __init__.py  egocentric_map.py  utils.py
acoustix/microphone_array/: __init__.py  binaural_array.py  quad_array.py  triangle.py  uniform_linear_array.py
acoustix/microphone_arrays/: __init__.py  array.py  binaural_array.py  mono_array.py  square_array.py
acoustix/room/: __init__.py  gpu_rir_room.py  pyroom_acoustics_room.py  room.py
acoustix/room/audio_objects/: __init__.py  audio_object.py  microphone.py  source.py
acoustix/scripts/: benchmark.py  benchmark_fft.py  stft_dimensions.py
tests/: conftest.py  test_audio_sources.py  test_doa_encoding.py  test_egocentric_map.py  test_noise.py  test_simulator.py  test_stft.py  test_stft_dims.py  test_utils.py
tests/microphone_array/: test_binaural.py
tests/microphone_arrays/: test_mic_patterns.py
tests/room/: test_gpurir_multiprocessing.py  test_rir.py
tests/simulator/: test_doa.py  test_plot_agent_signals.py  test_simulator.py  test_with_noise.py
