[project]
name = "acoustix"
version = "0.1.0"
description = "Dynamic acoustic simulation for robotic navigation and localization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "pyzmq>=27.0",
    "experiment-utilities>=0.3.9",
    "matplotlib>=3.10.7",
    "soundcard>=0.4.5",
    "torchaudio>=2.9.1",
    "pyroomacoustics>=0.8.6",
    "scipy>=1.16.3",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
test = ["pytest>=9.0.1"]
