[project]
name = "acoustix"
version = "1.0.0"
description = "Dynamic acoustic simulation for robotic navigation and localization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "pyzmq>=27.0",
    "experiment-utilities>=0.3.9",
    "matplotlib>=3.10.7",
    "soundcard>=0.4.5",
    "torchaudio>=2.9.1",
    "pyroomacoustics>=0.8.6",
    "scipy>=1.16.3",
    "gpurir",
    "pyqt6>=6.10.0",
    "opencv-python>=4.11.0.86",
    "torchcodec>=0.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["acoustix"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv.sources]
gpurir = { git = "https://github.com/DavidDiazGuerra/gpuRIR" }
matplotlib-sixel = { git = "https://github.com/GaetanLepage/matplotlib-sixel.git" }

[dependency-groups]
test = [
    "pytest>=9.0.1",
    "matplotlib-sixel",
]
